[package]
name = "otp"
version = "0.0.5"
authors = ["Tim Dumol <tim@timdumol.com>"]
description = "A Rust library for performing the HMAC-based One-Time Password (HOTP) and Time-based One-Time Password (TOTP) algorithms."
homepage = "https://github.com/TimDumol/rust-otp"
repository = "https://github.com/TimDumol/rust-otp"
readme = "README.md"
keywords = ["otp", "totp", "hotp"]
license = "MIT"

[lib]
name = "otp"

[dependencies]

openssl = "~0.2.8"
base32 = "~0.1.1"
time = "*"
