[package]
name = "otp"
version = "1.0.0"
authors = ["Tim Dumol <tim@timdumol.com>"]
description = "A Rust library for performing the HMAC-based One-Time Password (HOTP) and Time-based One-Time Password (TOTP) algorithms."
homepage = "https://github.com/TimDumol/rust-otp"
repository = "https://github.com/TimDumol/rust-otp"
readme = "README.md"
keywords = ["otp", "totp", "hotp"]
license = "MIT"
edition = "2018"

[lib]
name = "otp"

[dependencies]
ascii = "1.0"
data-encoding = "2.1.2"
err-derive = "0.2.1"
ring = "0.16.9"
